--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
 :root {
     --primary-color: #ED5C24;
     --secondary-color: #EFEFEF;
+    --tertiary-color: #5f5f5f;
 }
 
 * {
@@ -38,13 +39,22 @@ body {
     font-weight: 700;
 }
 
+
 a {
     text-decoration: none;
     color: var(--primary-color)
 }
 
+a:hover {
+    color: var(--tertiary-color);
+}
+
 @media (max-width: 768px) {
     .menu-principal {
         display: none;
+    }
+
+    .header-logo {
+        margin: auto;
     }
 }
