--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -507,9 +507,10 @@ i {
     }
 
     #badges {
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
         gap: 1rem;
     }
     
@@ -524,8 +525,14 @@ i {
         padding: 1rem;
     }
 
+    #about-skills {
+        gap: 1rem;
+    }
+
     #secao-about-texto {
         width: 100%;
+        padding: 1rem;
+        max-width: 100%;
     }
 
     #servicos {
